--- a/WahrDiscordApi/pom.xml
+++ b/WahrDiscordApi/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>lombok</artifactId>
             <version>1.16.8</version>
         </dependency>
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
