--- a/WahrDiscordApi/pom.xml
+++ b/WahrDiscordApi/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>metrics-core</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.oxo42</groupId>
+            <artifactId>stateless4j</artifactId>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
 
 </project>
