--- a/WahrDiscordApi/pom.xml
+++ b/WahrDiscordApi/pom.xml
@@ -70,6 +70,16 @@
             <artifactId>stateless4j</artifactId>
             <version>2.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.trove4j</groupId>
+            <artifactId>trove4j</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.2.2.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
